contrast fix

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main{
     font-variant: small-caps;
     font-size: 1.5em;
     font-weight: bold;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.423);
     padding: 0.01rem 0.5rem;
     padding-bottom: 0.3rem;
     border-radius: 0.5rem;
